--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest"
+  "dev": "nodemon server.js",
+  "test": "pytest -q"
   },
   "keywords": [
     "social-media",
