feat:implement more features in admin panel and remaining in srs

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,38 @@
 # Social Media Management System (SMMS) - Environment Configuration
+# Copy this file to .env and configure for your environment
 
 # Server Configuration
 PORT=3000
 NODE_ENV=development
 
-# Session Configuration
-SESSION_SECRET=your-secret-key-change-in-production
+# Session Configuration (SMMS-SR-002: 15-minute timeout)
+SESSION_SECRET=your-secret-key-change-in-production-minimum-32-characters
 SESSION_TIMEOUT_MINUTES=15
 
 # Database Configuration
 DATABASE_PATH=./smms.db
 
-# File Upload Configuration
+# File Upload Configuration (SMMS-F-006)
 UPLOAD_LIMIT_MB=5
 UPLOAD_DIR=./public/uploads
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp
 
-# Security
-BCRYPT_ROUNDS=10
+# Security (SMMS-SR-001, SMMS-SR-003, SMMS-SR-005)
+BCRYPT_ROUNDS=12
+FORCE_HTTPS=false
+MAX_LOGIN_ATTEMPTS=5
+LOCKOUT_DURATION_MINUTES=15
 
-# Email Configuration (for future use)
+# Logging
+LOG_LEVEL=info
+LOG_DIR=./logs
+
+# Backup Configuration (SMMS-NF-005)
+BACKUP_DIR=./backups
+AUTO_BACKUP_ENABLED=false
+AUTO_BACKUP_INTERVAL_HOURS=24
+
+# Email Configuration (for future use - SMMS-F-015)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
