--- a/.env
+++ b/.env
@@ -1,7 +1,32 @@
-PORT=5000
+# SMMS Environment Configuration
+PORT=3000
 NODE_ENV=development
-DATABASE_PATH=./db/smms.db
-JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
-JWT_EXPIRES_IN=3600
-FRONTEND_URL=http://localhost:3000
-LOG_LEVEL=debug
+
+# Session Configuration (SMMS-SR-002)
+SESSION_SECRET=smms-super-secret-session-key-change-in-production-minimum-32-chars-1234567890
+SESSION_TIMEOUT_MINUTES=15
+
+# Database Configuration
+DATABASE_PATH=./smms.db
+
+# Security (SMMS-SR-001, SMMS-SR-003, SMMS-SR-005)
+BCRYPT_ROUNDS=12
+FORCE_HTTPS=false
+MAX_LOGIN_ATTEMPTS=5
+LOCKOUT_DURATION_MINUTES=15
+
+# File Upload Configuration (SMMS-F-006)
+UPLOAD_LIMIT_MB=5
+UPLOAD_DIR=./public/uploads
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp
+
+# Logging
+LOG_LEVEL=info
+LOG_DIR=./logs
+
+# Backup Configuration (SMMS-NF-005)
+BACKUP_DIR=./backups
+
+# Application Settings
+APP_NAME=Social Media Management System
+APP_URL=http://localhost:3000
